fix scrollbar accesibility

--- a/src/app/modules/core/core.component.scss
+++ b/src/app/modules/core/core.component.scss
@@ -7,8 +7,6 @@
   display: flex;
   flex-direction: column;
   color: var(--color-white);
-  overflow-y: auto;
-  overflow-x: hidden;
 
   & > * {
     width: 100%;
