--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 h1,
 h2,
 h3,
